--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "portfolio-client",
   "private": true,
   "version": "0.0.0",
-  "homepage": "https://xraww.github.io/Portfolio/client",
+  "homepage": "https://xraww.github.io/Portfolio-client",
   "type": "module",
   "scripts": {
     "dev": "vite",
